packages/example-chat-system/envoy.yaml
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address: { address: 0.0.0.0, port_value: 15000 }

static_resources:
  listeners:
    - address:
        socket_address: { address: 0.0.0.0, port_value: 5080 }
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: x_grpc
                          max_grpc_timeout: 0s
                    cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-token,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: x-token,custom-header-1,grpc-status,grpc-message
              http_filters:
                - name: envoy.grpc_web
                - name: envoy.cors
                - name: envoy.router

  clusters:
    - name: x_grpc
      connect_timeout: 0.25s
      #type: logical_dns
      type: static
      http2_protocol_options: {}
      #lb_policy: round_robin
      hosts: [{ socket_address: { address: 127.0.0.1, port_value: 5000  }}]
